package(default_visibility = ["//visibility:public"])

load(
    "@io_bazel_rules_go//go:def.bzl",
    "go_library",
    "go_test",
)

#go_test(
#    name = "go_default_test",
#    srcs = ["benchmark_test.go"],
#    embed = [":go_default_library"],
#    deps = [
#        "//prow/github:go_default_library",
#        "//prow/github/fakegithub:go_default_library",
#        "//prow/plugins:go_default_library",
#        "//prow/repoowners:go_default_library",
#        "//vendor/github.com/sirupsen/logrus:go_default_library",
#        "//vendor/k8s.io/apimachinery/pkg/api/equality:go_default_library",
#        "//vendor/k8s.io/apimachinery/pkg/util/sets:go_default_library",
#    ],
#)

go_library(
    name = "go_default_library",
    srcs = ["benchmark.go"],
    importpath = "k8s.io/test-infra/prow/plugins/benchmark",
    deps = [
        "//prow/config:go_default_library",    
        "//prow/git:go_default_library",
        "//prow/github:go_default_library",
        "//prow/kube:go_default_library",    
        "//prow/pjutil:go_default_library",
        "//prow/pluginhelp:go_default_library",
        "//prow/plugins:go_default_library",
        "//prow/repoowners:go_default_library",
        "//vendor/github.com/sirupsen/logrus:go_default_library",
        "//vendor/k8s.io/apimachinery/pkg/util/sets:go_default_library",
        "//vendor/k8s.io/api/core/v1:go_default_library",
    ],
)

filegroup(
    name = "package-srcs",
    srcs = glob(["**"]),
    tags = ["automanaged"],
    visibility = ["//visibility:private"],
)

filegroup(
    name = "all-srcs",
    srcs = [":package-srcs"],
    tags = ["automanaged"],
)



    
